syntax = "proto3";
option java_multiple_files = true;
package palm.plugins.twilio.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service Twilio {
  rpc Send(TextMessage) returns (google.protobuf.Empty) {}
  rpc Logs(google.protobuf.Duration) returns (LogsResponse) {}
}

message TextMessage {
  string message = 1;
  repeated string to = 2;
}
message LogsResponse {
  message Item {
    int32 id = 1;
    string from = 2;
    string to = 3;
    string body = 4;
    google.protobuf.Timestamp created_at = 9;
  }
  repeated Item items = 1;
}
